# PresolveOpb

./: .gitignore  CMakeLists.txt  README.md
include/: ArgParser.hpp  BoostInclude.hpp  OpbParser.hpp  OpbWriter.hpp  PapiloInclude.hpp  ParamParser.hpp  PostsolveOpb.hpp  PostsolveWriter.hpp  RoundingSatSolutionParser.hpp  StdInclude.hpp  utils.hpp
jupyterTesting/: Untitled.ipynb  d_n_k-big.log1.json  d_n_k-big.log3.json  kidney50.log1.json  kidneyLarge.log1.json  logfile01.json  logfilePreSolving01.json  logfilePreSolvingOptProblems01.json  sumineq.log1.json  temp.log1.json  vertexcover-instances.log1.json
jupyterTesting/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: Student.cpp  mainapp.cpp
